# xsh-ls

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
docs/: gen_credits.py
src/xsh_ls/: __init__.py  __main__.py  cli.py  language_server.py
tests/: __init__.py  test_cli.py
